force-app/main/default/objects/Reading__c/Reading__c.object-meta.xml
<CustomObject>
    <description>Oggetto per memorizzare le letture del cliente</description>
    <label>Lettura</label>
    <nameField>
        <label>Lettura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>