force-app/main/default/objects/Reading__c/fields/CaseAcqua__c.field-meta.xml
<CustomField>
    <fullName>CaseAcqua__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseAcqua</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Letture (CaseAcqua)</relationshipLabel>
    <relationshipName>AcquaReadings</relationshipName>
    <type>Lookup</type>
</CustomField>