force-app/main/default/objects/Reading__c/fields/CaseGas__c.field-meta.xml
<CustomField>
    <fullName>CaseGas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Letture (Case)</relationshipLabel>
    <relationshipName>GasReadings</relationshipName>
    <type>Lookup</type>
</CustomField>