force-app/main/default/objects/Reading__c/fields/CommodityFormula__c.field-meta.xml
<CustomField>
    <fullName>CommodityFormula__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;HDT_RT_LetturaEle&apos;, &apos;Energia Elettrica&apos;, IF(RecordType.DeveloperName = &apos;HDT_RT_LetturaGas&apos;,&apos;Gas&apos;,&apos;Acqua&apos;))</formula>
    <label>Servizio</label>
    <type>Text</type>
</CustomField>