force-app/main/default/objects/Reading__c/fields/DisputedReadingValue1__c.field-meta.xml
<CustomField>
    <fullName>DisputedReadingValue1__c</fullName>
    <label>Lettura Contestata F1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>