force-app/main/default/objects/Reading__c/fields/OrderGas__c.field-meta.xml
<CustomField>
    <fullName>OrderGas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordine</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Letture (Ordine)</relationshipLabel>
    <relationshipName>GasReadings</relationshipName>
    <type>Lookup</type>
</CustomField>