force-app/main/default/objects/Reading__c/fields/ReadingBand1__c.field-meta.xml
<CustomField>
    <fullName>ReadingBand1__c</fullName>
    <label>Fascia Lettura 1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>