force-app/main/default/objects/Reading__c/fields/ReadingBand2__c.field-meta.xml
<CustomField>
    <fullName>ReadingBand2__c</fullName>
    <label>Fascia Lettura F2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>