force-app/main/default/objects/Reading__c/fields/ReadingBand3__c.field-meta.xml
<CustomField>
    <fullName>ReadingBand3__c</fullName>
    <label>Fascia Lettura 3</label>
    <length>2</length>
    <type>Text</type>
</CustomField>