force-app/main/default/objects/Reading__c/fields/ReadingBandCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingBandCorrector__c</fullName>
    <label>Fascia Lettura Correttore</label>
    <length>2</length>
    <type>Text</type>
</CustomField>