force-app/main/default/objects/Reading__c/fields/ReadingBandMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingBandMeter__c</fullName>
    <label>Fascia Lettura Misuratore</label>
    <length>2</length>
    <type>Text</type>
</CustomField>