force-app/main/default/objects/Reading__c/fields/ReadingDate5__c.field-meta.xml
<CustomField>
    <fullName>ReadingDate5__c</fullName>
    <label>Data Lettura F2</label>
    <type>Date</type>
</CustomField>