force-app/main/default/objects/Reading__c/fields/ReadingDate__c.field-meta.xml
<CustomField>
    <fullName>ReadingDate__c</fullName>
    <label>Data Lettura Cliente</label>
    <type>Date</type>
</CustomField>