force-app/main/default/objects/Reading__c/fields/ReadingDateCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingDateCorrector__c</fullName>
    <label>Data Lettura Correttore</label>
    <type>Date</type>
</CustomField>