force-app/main/default/objects/Reading__c/fields/ReadingDateMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingDateMeter__c</fullName>
    <label>Data Lettura Misuratore</label>
    <type>Date</type>
</CustomField>