force-app/main/default/objects/Reading__c/fields/ReadingDigitNumber1__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumber1__c</fullName>
    <label>Cifre Lettura F1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>