force-app/main/default/objects/Reading__c/fields/ReadingDigitNumber2__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumber2__c</fullName>
    <label>Cifre Lettura 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>