force-app/main/default/objects/Reading__c/fields/ReadingDigitNumber4__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumber4__c</fullName>
    <label>Cifre Lettura 4</label>
    <length>2</length>
    <type>Text</type>
</CustomField>