force-app/main/default/objects/Reading__c/fields/ReadingDigitNumberCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumberCorrector__c</fullName>
    <label>Cifre Lettura Correttore</label>
    <length>2</length>
    <type>Text</type>
</CustomField>