force-app/main/default/objects/Reading__c/fields/ReadingDigitNumberMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumberMeter__c</fullName>
    <label>Cifre Lettura Misuratore</label>
    <length>2</length>
    <type>Text</type>
</CustomField>