force-app/main/default/objects/Reading__c/fields/ReadingOldValue2__c.field-meta.xml
<CustomField>
    <fullName>ReadingOldValue2__c</fullName>
    <label>Lettura Precedente F2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>