force-app/main/default/objects/Reading__c/fields/ReadingOldValue3__c.field-meta.xml
<CustomField>
    <fullName>ReadingOldValue3__c</fullName>
    <label>Lettura Precedente F3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>