force-app/main/default/objects/Reading__c/fields/ReadingOldValue4__c.field-meta.xml
<CustomField>
    <fullName>ReadingOldValue4__c</fullName>
    <label>Lettura Precedente 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>