force-app/main/default/objects/Reading__c/fields/ReadingOldValueCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingOldValueCorrector__c</fullName>
    <label>Lettura Precedente Correttore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>