force-app/main/default/objects/Reading__c/fields/ReadingRegister2__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegister2__c</fullName>
    <label>Registro Lettura 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>