force-app/main/default/objects/Reading__c/fields/ReadingRegister4__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegister4__c</fullName>
    <label>Registro Lettura 4</label>
    <length>3</length>
    <type>Text</type>
</CustomField>