force-app/main/default/objects/Reading__c/fields/ReadingRegister7__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegister7__c</fullName>
    <label>Registro Lettura F1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>