force-app/main/default/objects/Reading__c/fields/ReadingRegisterCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegisterCorrector__c</fullName>
    <label>Registro Lettura Correttore</label>
    <length>3</length>
    <type>Text</type>
</CustomField>