force-app/main/default/objects/Reading__c/fields/ReadingRegisterMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegisterMeter__c</fullName>
    <label>Registro Lettura Misuratore</label>
    <length>3</length>
    <type>Text</type>
</CustomField>