force-app/main/default/objects/Reading__c/fields/ReadingSerialNumber1__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumber1__c</fullName>
    <label>Matricola 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>