force-app/main/default/objects/Reading__c/fields/ReadingSerialNumber4__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumber4__c</fullName>
    <label>Matricola F1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>