force-app/main/default/objects/Reading__c/fields/ReadingSerialNumber6__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumber6__c</fullName>
    <label>Matricola F3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>