force-app/main/default/objects/Reading__c/fields/ReadingSerialNumberCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumberCorrector__c</fullName>
    <label>Matricola Correttore</label>
    <length>18</length>
    <type>Text</type>
</CustomField>