force-app/main/default/objects/Reading__c/fields/ReadingSerialNumberMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumberMeter__c</fullName>
    <label>Matricola Misuratore</label>
    <length>18</length>
    <type>Text</type>
</CustomField>