force-app/main/default/objects/Reading__c/fields/ReadingType2__c.field-meta.xml
<CustomField>
    <fullName>ReadingType2__c</fullName>
    <label>Tipo Lettura F2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>