force-app/main/default/objects/Reading__c/fields/ReadingType3__c.field-meta.xml
<CustomField>
    <fullName>ReadingType3__c</fullName>
    <label>Tipo Lettura 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>