force-app/main/default/objects/Reading__c/fields/ReadingType4__c.field-meta.xml
<CustomField>
    <fullName>ReadingType4__c</fullName>
    <label>Tipo Lettura F4</label>
    <length>50</length>
    <type>Text</type>
</CustomField>