force-app/main/default/objects/Reading__c/fields/ReadingTypeCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingTypeCorrector__c</fullName>
    <label>Tipo Lettura Correttore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>