force-app/main/default/objects/Reading__c/fields/ReadingTypeMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingTypeMeter__c</fullName>
    <label>Tipo Lettura Misuratore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>