force-app/main/default/objects/Reading__c/fields/ReadingUnit2__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnit2__c</fullName>
    <label>Unità di Misura 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>