force-app/main/default/objects/Reading__c/fields/ReadingUnit3__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnit3__c</fullName>
    <label>Unità di Misura F3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>