force-app/main/default/objects/Reading__c/fields/ReadingUnitCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnitCorrector__c</fullName>
    <label>Unità di Misura Correttore</label>
    <length>3</length>
    <type>Text</type>
</CustomField>