force-app/main/default/objects/Reading__c/fields/ReadingUnitMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnitMeter__c</fullName>
    <label>Unità di Misura Misuratore</label>
    <length>3</length>
    <type>Text</type>
</CustomField>