force-app/main/default/objects/Reading__c/fields/ReadingValue5__c.field-meta.xml
<CustomField>
    <fullName>ReadingValue5__c</fullName>
    <label>Lettura F2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>