force-app/main/default/objects/Reading__c/fields/ReadingValue8__c.field-meta.xml
<CustomField>
    <fullName>ReadingValue8__c</fullName>
    <label>Lettura F2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>