force-app/main/default/objects/Reading__c/fields/ReadingValueCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingValueCorrector__c</fullName>
    <label>Lettura Correttore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>