force-app/main/default/objects/Reading__c/fields/ReadingValueMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingValueMeter__c</fullName>
    <label>Lettura Misuratore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>