force-app/main/default/objects/Reading__c/fields/SendTo__c.field-meta.xml
<CustomField>
    <fullName>SendTo__c</fullName>
    <description>Campo tecnico usato dall&apos;integrazione SOL</description>
    <label>Send To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>