force-app/main/default/objects/Reading__c/recordTypes/HDT_RT_LetturaAcqua.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_LetturaAcqua</fullName>
    <active>true</active>
    <label>Lettura Acqua</label>
</RecordType>