force-app/main/default/objects/Reading__c/recordTypes/HDT_RT_LetturaEle.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_LetturaEle</fullName>
    <active>true</active>
    <description>Lettura Energia Elettrica</description>
    <label>Lettura Energia Elettrica</label>
</RecordType>