force-app/main/default/objects/Reading__c/recordTypes/HDT_RT_LetturaGas.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_LetturaGas</fullName>
    <active>true</active>
    <description>Lettura Gas</description>
    <label>Lettura Gas</label>
</RecordType>